# jordan_workshop

./: README.md  dds.md  shapes.sdf
area_interfaces/: CMakeLists.txt  CMakeLists.txt.ans  package.xml  package.xml.ans
area_service/: CMakeLists.txt  CMakeLists.txt.ans  README.md  package.xml  package.xml.ans
area_service/src/: area_client.cpp  area_client.cpp.ans  area_server.cpp  area_server.cpp.ans
cpp_interface_pkg/: CMakeLists.txt  package.xml
cpp_launch_pkg/: CMakeLists.txt  package.xml
cpp_launch_pkg/launch/: cpp_launch_file.launch.py
cpp_pub_sub_pkg/: CMakeLists.txt  package.xml
cpp_pub_sub_pkg/launch/: cpp_pub_sub.launch.py  publisher_param.launch.py
cpp_pub_sub_pkg/src/: publisher_hello_ros.cpp  subscriber_hello_ros.cpp
custom_msgs/: CMakeLists.txt  package.xml
mogi_trajectory_server/: README.md
mogi_trajectory_server/mogi_trajectory_server/: trajectory.py
petra_robot/: CMakeLists.txt  nav2_guide.md  package.xml  test.md
petra_robot/config/: petra.yaml
petra_robot/launch/: localization.launch.py  mapping.launch.py  petra_sim.launch.py  petra_urdf.launch.py  petra_urdf_v1.launch.py  petra_urdf_v2.launch.py  petra_urdf_v3.launch.py  petra_urdf_v4.launch.py  petra_urdf_v5.launch.py  petra_urdf_v6.launch.py  petra_urdf_v7.launch.py  world.launch.py
petra_robot/urdf/: petra.gazebo  petra_robot.sdf  petra_robot.urdf  petra_robot.urdf.pkb  petra_robot_v1.urdf  petra_robot_v2.urdf
petra_robot/worlds/: default.sdf
py_launch_pkg/: package.xml  setup.py
py_launch_pkg/launch/: remapping_turtle.launch.py
py_parameters_pkg/: package.xml  setup.cfg  setup.py
py_parameters_pkg/launch/: publisher_param.launch.py
py_parameters_pkg/py_parameters_pkg/: my_parameter.py  py_param.py
py_pub_sub_pkg/: package.xml  setup.py
py_pub_sub_pkg/py_pub_sub_pkg/: publisher_hello_ros.py  subscriber_hello_ros.py
py_service_pkg/: package.xml  setup.cfg  setup.py
py_service_pkg/py_service_pkg/: service_client.py  service_server.py
py_tf2_pkg/: package.xml  setup.cfg  setup.py
qos_test/: package.xml  setup.cfg  setup.py
qos_test/qos_test/: qos_publisher.py  qos_reliability_publisher.py  qos_reliability_subscriber.py  (+1 more)
rectangle_publisher/: CMakeLists.txt  README.md  package.xml
rectangle_publisher/src/: rectangle_publisher.cpp
scripts/: check_github.sh  install_chrome.sh  install_gazebo_sim_harmonic.sh  install_ros2_jazzy.sh  install_vscode.sh  setup.sh
temperature_monitor/: CMakeLists.txt  CMakeLists.txt.ans  README.md.ans  package.xml  package.xml.ans
tf2_python_demo/: package.xml  setup.cfg  setup.py
(+15 files in other folders)
