<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.1</version>
  <description>Custom message package for ROS 2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- TODO: Add build tool dependencies for message generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- TODO: Add runtime dependencies -->
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
